[package]
name = "mandelbrot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { "version" = "0.35.2", features = ["unsafe_textures"] }
tokio = { "version" = "1.28.2", features = ["full"] }
tokio-util = "0.7.8"
sdl-dispatch = { path = "libs/sdl-dispatch" }
salty-broth = { path = "libs/salty-broth" }
futures = "0.3.*"
color-eyre = "0.6.2"

