[package]
name = "salty-broth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
tokio = { "version" = "1.28.2", features = ["full"] }
tokio-util = "0.7.8"
sdl-dispatch = { path = "../sdl-dispatch" }
futures = "0.3.*"

